# google-analytics-mcp

./: .dockerignore  Dockerfile  pyproject.toml
analytics_mcp/: server.py
analytics_mcp/tools/: utils.py
analytics_mcp/tools/reporting/: core.py
